# main/http_server/axe-os/src/app/app.module.ts
@@ -14,6 +14,8 @@ import { Api } from './generated/api';
 import { ApiConfiguration } from './generated/api-configuration';
 import { EditComponent } from './components/edit/edit.component';
 import { PoolComponent } from './components/pool/pool.component';
+import { PoolScheduleComponent } from './components/pool-schedule/pool-schedule.component';
+import { OperatingProfilesComponent } from './components/operating-profiles/operating-profiles.component';
 import { SchedulerComponent } from './components/scheduler/scheduler.component';
 import { MiningControlsComponent } from './components/mining-controls/mining-controls.component';
 import { NetworkEditComponent } from './components/network-edit/network.edit.component';
@@ -63,7 +65,9 @@ const components = [
   UpdateComponent,
   PoolComponent,
   SchedulerComponent,
-  MiningControlsComponent
+  MiningControlsComponent,
+  OperatingProfilesComponent,
+  PoolScheduleComponent
 ];
 
 @NgModule({
